// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`feed fixtures (spec 03 §12, §13) > atom.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "Essays on cities & maps",
    "iconUrl": "https://www.example.org/favicon.ico",
    "langHint": "en",
    "language": "en-GB",
    "siteUrl": "https://www.example.org/blog/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Field Notes",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": "Mira Example",
      "categories": [
        "maps",
        "transit",
      ],
      "contentHash": "8097973f4073e070eb252e9a9c4f4ec60d8bb57551cd9b20a6754057ea34575b",
      "excerpt": "We walked the whole network with a GPS logger.",
      "excerptHtml": "<p>We walked the whole network with a <a href="https://www.example.org/blog/tools/gps.html" rel="noopener noreferrer nofollow" target="_blank">GPS logger</a>.</p>",
      "feedBodyHtml": "<p>We walked the whole network with a <a href="https://www.example.org/blog/tools/gps.html" rel="noopener noreferrer nofollow" target="_blank">GPS logger</a>.</p>",
      "feedBodyText": "We walked the whole network with a GPS logger.",
      "feedBodyTruncated": false,
      "guid": "tag:example.org,2026:tram-stops",
      "imageUrl": "https://www.example.org/blog/2026/09/tram-map.jpg",
      "link": "https://www.example.org/blog/2026/09/tram-stops.html",
      "publishedAt": 2026-09-25T06:00:00.000Z,
      "sourceIndex": 0,
      "title": "Mapping every tram stop",
      "titleNorm": "mapping every tram stop",
    },
    {
      "author": "Second Author",
      "categories": [],
      "contentHash": "b748fdbf9865561b03e65ff0254589d21dc91102b529c15d70d5fe9884654d9c",
      "excerpt": "A plain-text entry. It shows <b> literally, & keeps the line break inside the second paragraph.",
      "excerptHtml": "<p>A plain-text entry.</p><p>It shows &lt;b&gt; literally, &amp; keeps the line<br />break inside the second paragraph.</p>",
      "feedBodyHtml": "<p>A plain-text entry.</p><p>It shows &lt;b&gt; literally, &amp; keeps the line<br />break inside the second paragraph.</p>",
      "feedBodyText": "A plain-text entry.

It shows <b> literally, & keeps the line
break inside the second paragraph.",
      "feedBodyTruncated": false,
      "guid": "tag:example.org,2026:br-tags",
      "imageUrl": null,
      "link": "https://www.example.org/blog/2026/09/br-tags",
      "publishedAt": 2026-09-24T12:00:00.000Z,
      "sourceIndex": 1,
      "title": "Why <br> tags don't belong in titles",
      "titleNorm": "why br tags don t belong in titles",
    },
    {
      "author": "Mira Example",
      "categories": [],
      "contentHash": "d7532594936efe024fc376465643a217c604e2b4639e8f6a2aed1a0512e4b297",
      "excerpt": "Hello world! See the notes. Mixed content keeps its order <even with CDATA>.",
      "excerptHtml": "<p>Hello <b>world</b>! See <a href="https://static.example.org/posts/xhtml/notes.html" rel="noopener noreferrer nofollow" target="_blank">the notes</a>.</p>
<p> Mixed <i>content</i> keeps its order &lt;even with CDATA&gt;.</p>",
      "feedBodyHtml": "<p>Hello <b>world</b>! See <a href="https://static.example.org/posts/xhtml/notes.html" rel="noopener noreferrer nofollow" target="_blank">the notes</a>.</p>
<p> Mixed <i>content</i> keeps its order &lt;even with CDATA&gt;.</p>",
      "feedBodyText": "Hello world! See the notes.

Mixed content keeps its order <even with CDATA>.",
      "feedBodyTruncated": false,
      "guid": "tag:example.org,2026:xhtml",
      "imageUrl": "https://static.example.org/posts/xhtml/figure-1.png",
      "link": "https://www.example.org/blog/2026/09/xhtml",
      "publishedAt": 2026-09-23T10:00:00.000Z,
      "sourceIndex": 2,
      "title": "Inline XHTML stays in order",
      "titleNorm": "inline xhtml stays in order",
    },
    {
      "author": "Mira Example",
      "categories": [],
      "contentHash": "a49712f0256615ea5c9f62cfb22ea1eb6c2cc627418dec971224a62c0cbc72d5",
      "excerpt": "The summary is used because there is no content.",
      "excerptHtml": "<p>The summary is used because there is no content.</p>",
      "feedBodyHtml": "<p>The summary is used because there is no content.</p>",
      "feedBodyText": "The summary is used because there is no content.",
      "feedBodyTruncated": false,
      "guid": "tag:example.org,2026:draft",
      "imageUrl": null,
      "link": "https://www.example.org/blog/2026/09/draft",
      "publishedAt": 2026-09-22T07:45:00.000Z,
      "sourceIndex": 3,
      "title": "Published date is broken, updated is not",
      "titleNorm": "published date is broken updated is not",
    },
    {
      "author": "Mira Example",
      "categories": [],
      "contentHash": "e1f0076df650ba8cba17d02ad7bad8873defd7513eb574683d7c4cb8c86a3796",
      "excerpt": "Only a PDF is available; this summary is the excerpt.",
      "excerptHtml": "<p>Only a PDF is available; this summary is the excerpt.</p>",
      "feedBodyHtml": "<p>Only a PDF is available; this summary is the excerpt.</p>",
      "feedBodyText": "Only a PDF is available; this summary is the excerpt.",
      "feedBodyTruncated": false,
      "guid": "urn:uuid:4f1c7a2e-9d3b-4c65-8a2f-1b0e6d9c3a77",
      "imageUrl": null,
      "link": null,
      "publishedAt": 2026-09-21T07:45:00.000Z,
      "sourceIndex": 4,
      "title": "Out-of-line content is never fetched",
      "titleNorm": "out of line content is never fetched",
    },
  ],
  "itemsTruncated": false,
  "kind": "atom",
  "lenient": false,
  "ok": true,
  "totalItems": 5,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > bom-utf8.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "A feed that starts with a byte order mark.",
    "iconUrl": null,
    "langHint": null,
    "language": null,
    "siteUrl": "https://cafe.example.com/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Café Notes",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": null,
      "categories": [],
      "contentHash": "447909bb021c564d90ae02ef82541e0dcfd3292d6344dd3ceddb6f1f611ca2f7",
      "excerpt": "We tried 14 desserts in 3 days.",
      "excerptHtml": "We tried 14 desserts in 3 days.",
      "feedBodyHtml": "We tried 14 desserts in 3 days.",
      "feedBodyText": "We tried 14 desserts in 3 days.",
      "feedBodyTruncated": false,
      "guid": "https://cafe.example.com/2026/09/creme-brulee",
      "imageUrl": null,
      "link": "https://cafe.example.com/2026/09/creme-brulee",
      "publishedAt": 2026-09-22T11:00:00.000Z,
      "sourceIndex": 0,
      "title": "Crème brûlée, ranked",
      "titleNorm": "creme brulee ranked",
    },
  ],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": false,
  "ok": true,
  "totalItems": 1,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > cdata-html.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "Najnovšie správy z domova",
    "iconUrl": null,
    "langHint": "sk",
    "language": "sk",
    "siteUrl": "https://www.dennik.example/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Denník Príklad – Správy",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": null,
      "categories": [],
      "contentHash": "012c2cae4ee8ab77677af5495915dc6853fb85ca8175be54faa4ffd261aaa564",
      "excerpt": "Poslanci schválili rozpočet na rok 2027. Viac v článku, alebo tu, alebo napíšte nám. Hlavné body Cena: 5 < 7 & 3 % Príjmy 1,2 mld. €",
      "excerptHtml": "Poslanci schválili rozpočet na rok 2027.
<p>Viac v <a href="https://www.dennik.example/spravy/rozpocet-2027#detail" rel="noopener noreferrer nofollow" target="_blank">článku</a>, alebo tu, alebo napíšte nám.</p>
<h2>Hlavné body</h2>
<p>Cena: 5 &lt; 7 &amp; 3 %</p>
<br /><br />Príjmy<br />1,2 mld. €",
      "feedBodyHtml": "Poslanci schválili rozpočet na rok 2027.
<p>Viac v <a href="https://www.dennik.example/spravy/rozpocet-2027#detail" rel="noopener noreferrer nofollow" target="_blank">článku</a>, alebo tu, alebo napíšte nám.</p>
<h2>Hlavné body</h2>
<p>Cena: 5 &lt; 7 &amp; 3 %</p>
<br /><br />Príjmy<br />1,2 mld. €",
      "feedBodyText": "Poslanci schválili rozpočet na rok 2027.

Viac v článku, alebo tu, alebo napíšte nám.

Hlavné body

Cena: 5 < 7 & 3 %

Príjmy
1,2 mld. €",
      "feedBodyTruncated": false,
      "guid": "dennik-2026-88213",
      "imageUrl": "https://www.dennik.example/foto/2026/09/rozpocet.jpg",
      "link": "https://www.dennik.example/spravy/rozpocet-2027",
      "publishedAt": 2026-09-26T05:40:00.000Z,
      "sourceIndex": 0,
      "title": "Exkluzívne: Mestská rada schválila rozpočet & nové investície",
      "titleNorm": "exkluzivne mestska rada schvalila rozpocet nove investicie",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "a366c454ae60ec4db84a2059a5eaeb6980d874fd48917e3f39e46b9e64ff05d9",
      "excerpt": "Krátka správa s odkazom.",
      "excerptHtml": "<p>Krátka <em>správa</em> s <a href="https://example.com/a?x=1&amp;y=2" rel="noopener noreferrer nofollow" target="_blank">odkazom</a>.</p>",
      "feedBodyHtml": "<p>Krátka <em>správa</em> s <a href="https://example.com/a?x=1&amp;y=2" rel="noopener noreferrer nofollow" target="_blank">odkazom</a>.</p>",
      "feedBodyText": "Krátka správa s odkazom.",
      "feedBodyTruncated": false,
      "guid": "dennik-2026-88214",
      "imageUrl": null,
      "link": "https://www.dennik.example/spravy/druhy",
      "publishedAt": 2026-09-26T04:10:00.000Z,
      "sourceIndex": 1,
      "title": "Druhý článok bez obrázka",
      "titleNorm": "druhy clanok bez obrazka",
    },
  ],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": false,
  "ok": true,
  "totalItems": 2,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > dates.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "Future, missing and malformed dates.",
    "iconUrl": null,
    "langHint": null,
    "language": null,
    "siteUrl": "https://dates.example.com/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Date Edge Cases",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": null,
      "categories": [],
      "contentHash": "2184f70db38d5d6749cf703afefcdb2a82c36e4c974c20f6977e56be56d4ec05",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://dates.example.com/skew",
      "publishedAt": 2026-09-27T06:00:00.000Z,
      "sourceIndex": 2,
      "title": "Eighteen hours ahead (clock skew)",
      "titleNorm": "eighteen hours ahead clock skew",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "5c709279c928e8759f7e93e327fe52af321f0e68157e73016d22416c3aed8bb6",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://dates.example.com/comment",
      "publishedAt": 2026-09-25T18:30:00.000Z,
      "sourceIndex": 8,
      "title": "Offset with a zone comment",
      "titleNorm": "offset with a zone comment",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "8071f9f76c795ad8ca7e4751767dcb0e13fcfd08a06b7ed909a8731270c4d314",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://dates.example.com/iso",
      "publishedAt": 2026-09-25T16:00:00.250Z,
      "sourceIndex": 7,
      "title": "ISO date in pubDate",
      "titleNorm": "iso date in pubdate",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "de8a01367d0d6030725bf6e358475931ef1ad605adeaf8176231cce7ec082b04",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://dates.example.com/no-zone",
      "publishedAt": 2026-09-24T23:59:59.000Z,
      "sourceIndex": 9,
      "title": "No zone means UTC",
      "titleNorm": "no zone means utc",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "09487ba72eec6abf73ac5c88aa8cbbc89807db5a8917e0aa904405bf7b388cc9",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://dates.example.com/est",
      "publishedAt": 2026-09-24T13:00:00.000Z,
      "sourceIndex": 5,
      "title": "US zone abbreviation",
      "titleNorm": "us zone abbreviation",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "50d07777edc5009c8a0d67539201bbe778bcb8a5ac0517f697382dc9ab89db9a",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://dates.example.com/two-digit",
      "publishedAt": 2026-09-23T07:00:00.000Z,
      "sourceIndex": 6,
      "title": "Two-digit year and no weekday",
      "titleNorm": "two digit year and no weekday",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "73c50bcafb94ca8c605abf767fff1ca6b746fd3ec93a6c788bdb43b1d24e40e8",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://dates.example.com/dc-fallback",
      "publishedAt": 2026-09-20T08:00:00.000Z,
      "sourceIndex": 4,
      "title": "Malformed pubDate, valid dc:date",
      "titleNorm": "malformed pubdate valid dc date",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "ebb43f138ef1ba61ad844ada29244e03a85b1467971c8d9b536108e9ea1b6f06",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://dates.example.com/undated-1",
      "publishedAt": null,
      "sourceIndex": 0,
      "title": "Undated first",
      "titleNorm": "undated first",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "64a79f79082401511d0abca97cf0bf47c63daf454bb860714735ccdbd5c19386",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://dates.example.com/future",
      "publishedAt": null,
      "sourceIndex": 1,
      "title": "Far future (scheduled post)",
      "titleNorm": "far future scheduled post",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "0e9d137912d70a8b19722d424609b4e7fb9762cf4275d8721e90bbf0178964eb",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://dates.example.com/malformed",
      "publishedAt": null,
      "sourceIndex": 3,
      "title": "Malformed pubDate",
      "titleNorm": "malformed pubdate",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "5c9f7dc66c5922d0bcafec65b6a26319dda0e277bc8ad87aa384a6c1fe4c0fa3",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://dates.example.com/feb-30",
      "publishedAt": null,
      "sourceIndex": 10,
      "title": "30 February",
      "titleNorm": "30 february",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "6425523343532f72971092db2b365cc8d7ef8db03d0437db7835264b8f3a7915",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://dates.example.com/undated-2",
      "publishedAt": null,
      "sourceIndex": 11,
      "title": "Undated last",
      "titleNorm": "undated last",
    },
  ],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": false,
  "ok": true,
  "totalItems": 12,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > doctype-entity.xml parses to the expected result 1`] = `
{
  "code": "FEED_PARSE_ERROR",
  "message": "XML DOCTYPE declarations are not allowed",
  "ok": false,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > google-news.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "Google News",
    "iconUrl": null,
    "langHint": "sk",
    "language": "sk",
    "siteUrl": "https://news.google.com/search?q=Slovensko&hl=sk&gl=SK&ceid=SK:sk",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": ""Slovensko" - Google News",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": null,
      "categories": [],
      "contentHash": "2478f9ed41c89c92f45245827aaec17e366ba583c11d4ff745afff623171042a",
      "excerpt": "Tatry: horská služba varuje pred snehom vo vysokých polohách Správy z hôr V Tatrách napadol prvý sneh Východoslovenský denník",
      "excerptHtml": "<ol><li><a href="https://news.google.com/rss/articles/CBMimAFBVV95cUxNaGJ0Q3N4VEdIa0h5dFhSbF9VYXJ5bFhSWnB2Z0t1d3pqR3JYY0Z5U0J4d2t2bW5sZ01wYW1SbE5xSTFfV1Z4cV9ZSVNqQkt0aE0?oc=5" rel="noopener noreferrer nofollow" target="_blank">Tatry: horská služba varuje pred snehom vo vysokých polohách</a>  Správy z hôr</li><li><a href="https://news.google.com/rss/articles/CBMiaEFVX3lxTE9uT2Vfd2hGdE1oS3FfZ1pXRFh6X0FwSmp1b1BkRnBGR3hqWHVlUUZ3?oc=5" rel="noopener noreferrer nofollow" target="_blank">V Tatrách napadol prvý sneh</a>  Východoslovenský denník</li></ol>",
      "feedBodyHtml": "<ol><li><a href="https://news.google.com/rss/articles/CBMimAFBVV95cUxNaGJ0Q3N4VEdIa0h5dFhSbF9VYXJ5bFhSWnB2Z0t1d3pqR3JYY0Z5U0J4d2t2bW5sZ01wYW1SbE5xSTFfV1Z4cV9ZSVNqQkt0aE0?oc=5" rel="noopener noreferrer nofollow" target="_blank">Tatry: horská služba varuje pred snehom vo vysokých polohách</a>  Správy z hôr</li><li><a href="https://news.google.com/rss/articles/CBMiaEFVX3lxTE9uT2Vfd2hGdE1oS3FfZ1pXRFh6X0FwSmp1b1BkRnBGR3hqWHVlUUZ3?oc=5" rel="noopener noreferrer nofollow" target="_blank">V Tatrách napadol prvý sneh</a>  Východoslovenský denník</li></ol>",
      "feedBodyText": "Tatry: horská služba varuje pred snehom vo vysokých polohách Správy z hôr
V Tatrách napadol prvý sneh Východoslovenský denník",
      "feedBodyTruncated": false,
      "guid": "CBMimAFBVV95cUxNaGJ0Q3N4VEdIa0h5dFhSbF9VYXJ5bFhSWnB2Z0t1d3pqR3JYY0Z5U0J4d2t2bW5sZ01wYW1SbE5xSTFfV1Z4cV9ZSVNqQkt0aE0",
      "imageUrl": null,
      "link": "https://news.google.com/rss/articles/CBMimAFBVV95cUxNaGJ0Q3N4VEdIa0h5dFhSbF9VYXJ5bFhSWnB2Z0t1d3pqR3JYY0Z5U0J4d2t2bW5sZ01wYW1SbE5xSTFfV1Z4cV9ZSVNqQkt0aE0?oc=5",
      "publishedAt": 2026-09-26T08:45:00.000Z,
      "sourceIndex": 1,
      "title": "Tatry: horská služba varuje pred snehom vo vysokých polohách - Správy z hôr",
      "titleNorm": "tatry horska sluzba varuje pred snehom vo vysokych polohach spravy z hor",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "08b76e9c6275dbee42efaea958408a4336b392fe984d234694a43e056f1b321b",
      "excerpt": "Vláda schválila návrh rozpočtu na rok 2027 Denník Príklad",
      "excerptHtml": "<a href="https://news.google.com/rss/articles/CBMiggFBVV95cUxQbmVfcm9ScVp0S3JhX3U1b0JpX2hGa3pBOGR5dVlIQ2hWd0Z2RFlQdnJ2c2VxWk9nRjBQbXBRVTJ3ZnJNTHp5X3dNSUFhNUpOT2JwLXdGX0F3?oc=5" rel="noopener noreferrer nofollow" target="_blank">Vláda schválila návrh rozpočtu na rok 2027</a>  Denník Príklad",
      "feedBodyHtml": "<a href="https://news.google.com/rss/articles/CBMiggFBVV95cUxQbmVfcm9ScVp0S3JhX3U1b0JpX2hGa3pBOGR5dVlIQ2hWd0Z2RFlQdnJ2c2VxWk9nRjBQbXBRVTJ3ZnJNTHp5X3dNSUFhNUpOT2JwLXdGX0F3?oc=5" rel="noopener noreferrer nofollow" target="_blank">Vláda schválila návrh rozpočtu na rok 2027</a>  Denník Príklad",
      "feedBodyText": "Vláda schválila návrh rozpočtu na rok 2027 Denník Príklad",
      "feedBodyTruncated": false,
      "guid": "CBMiggFBVV95cUxQbmVfcm9ScVp0S3JhX3U1b0JpX2hGa3pBOGR5dVlIQ2hWd0Z2RFlQdnJ2c2VxWk9nRjBQbXBRVTJ3ZnJNTHp5X3dNSUFhNUpOT2JwLXdGX0F3",
      "imageUrl": null,
      "link": "https://news.google.com/rss/articles/CBMiggFBVV95cUxQbmVfcm9ScVp0S3JhX3U1b0JpX2hGa3pBOGR5dVlIQ2hWd0Z2RFlQdnJ2c2VxWk9nRjBQbXBRVTJ3ZnJNTHp5X3dNSUFhNUpOT2JwLXdGX0F3?oc=5",
      "publishedAt": 2026-09-26T07:03:00.000Z,
      "sourceIndex": 0,
      "title": "Vláda schválila návrh rozpočtu na rok 2027 - Denník Príklad",
      "titleNorm": "vlada schvalila navrh rozpoctu na rok 2027 dennik priklad",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "d7868ab1d2e4afe7914ba6c5e2022f517094bf7e39e0dfb9650bab263b9941a9",
      "excerpt": "Nové vlaky na trati Bratislava – Košice Rail Magazín",
      "excerptHtml": "<a href="https://news.google.com/rss/articles/CBMiXkFVX3lxTE9RVjRyU3hjZUNkN0RHWUpWVjBpSGpwYnFFb3RONW9nYl9SaG1ZNWVYTnp0ZFd0UF9rX0Nfb0pTZWpjSGtXYw?oc=5" rel="noopener noreferrer nofollow" target="_blank">Nové vlaky na trati Bratislava – Košice</a>  Rail Magazín",
      "feedBodyHtml": "<a href="https://news.google.com/rss/articles/CBMiXkFVX3lxTE9RVjRyU3hjZUNkN0RHWUpWVjBpSGpwYnFFb3RONW9nYl9SaG1ZNWVYTnp0ZFd0UF9rX0Nfb0pTZWpjSGtXYw?oc=5" rel="noopener noreferrer nofollow" target="_blank">Nové vlaky na trati Bratislava – Košice</a>  Rail Magazín",
      "feedBodyText": "Nové vlaky na trati Bratislava – Košice Rail Magazín",
      "feedBodyTruncated": false,
      "guid": "CBMiXkFVX3lxTE9RVjRyU3hjZUNkN0RHWUpWVjBpSGpwYnFFb3RONW9nYl9SaG1ZNWVYTnp0ZFd0UF9rX0Nfb0pTZWpjSGtXYw",
      "imageUrl": null,
      "link": "https://news.google.com/rss/articles/CBMiXkFVX3lxTE9RVjRyU3hjZUNkN0RHWUpWVjBpSGpwYnFFb3RONW9nYl9SaG1ZNWVYTnp0ZFd0UF9rX0Nfb0pTZWpjSGtXYw?oc=5",
      "publishedAt": 2026-09-25T17:20:00.000Z,
      "sourceIndex": 2,
      "title": "Nové vlaky na trati Bratislava – Košice - Rail Magazín",
      "titleNorm": "nove vlaky na trati bratislava kosice rail magazin",
    },
  ],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": false,
  "ok": true,
  "totalItems": 3,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > iso-8859-2.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "Denní zpravodajství z jižní Moravy",
    "iconUrl": null,
    "langHint": "cs",
    "language": "cs",
    "siteUrl": "https://www.brno-zpravy.example/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Zprávy z Brna",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": null,
      "categories": [],
      "contentHash": "ac510fb394508e3a819076b4daee3a0a1bafaba3c636231a811fe587d1f1a5c7",
      "excerpt": "Město zavádí zóny placeného stání. Týká se to i ulic Údolní a Úvoz; poplatek činí 40 Kč za hodinu.",
      "excerptHtml": "Město zavádí zóny placeného stání. Týká se to i ulic Údolní a Úvoz; poplatek činí 40 Kč za hodinu.",
      "feedBodyHtml": "Město zavádí zóny placeného stání. Týká se to i ulic Údolní a Úvoz; poplatek činí 40 Kč za hodinu.",
      "feedBodyText": "Město zavádí zóny placeného stání. Týká se to i ulic Údolní a Úvoz; poplatek činí 40 Kč za hodinu.",
      "feedBodyTruncated": false,
      "guid": "https://www.brno-zpravy.example/doprava/parkovani",
      "imageUrl": null,
      "link": "https://www.brno-zpravy.example/doprava/parkovani",
      "publishedAt": 2026-09-24T13:00:00.000Z,
      "sourceIndex": 0,
      "title": "Řidiči v Brně budou od pondělí platit za parkování v centru",
      "titleNorm": "ridici v brne budou od pondeli platit za parkovani v centru",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "4e4f6f93fb9ab6c4f66b1319d0d5b87144fe53da472726ad458b4fde89fbe91c",
      "excerpt": "Bankovní rada hlasovala poměrem 5:2. Příští zasedání bude v listopadu.",
      "excerptHtml": "Bankovní rada hlasovala poměrem 5:2. Příští zasedání bude v listopadu.",
      "feedBodyHtml": "Bankovní rada hlasovala poměrem 5:2. Příští zasedání bude v listopadu.",
      "feedBodyText": "Bankovní rada hlasovala poměrem 5:2. Příští zasedání bude v listopadu.",
      "feedBodyTruncated": false,
      "guid": "https://www.brno-zpravy.example/ekonomika/cnb-sazby",
      "imageUrl": null,
      "link": "https://www.brno-zpravy.example/ekonomika/cnb-sazby",
      "publishedAt": 2026-09-23T12:45:00.000Z,
      "sourceIndex": 1,
      "title": "Česká národní banka ponechala úrokové sazby beze změny",
      "titleNorm": "ceska narodni banka ponechala urokove sazby beze zmeny",
    },
  ],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": false,
  "ok": true,
  "totalItems": 2,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > jsonfeed-1.0.json parses to the expected result 1`] = `
{
  "feed": {
    "description": null,
    "iconUrl": null,
    "langHint": null,
    "language": null,
    "siteUrl": "https://legacy.example.com/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Legacy JSON Feed",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": "Old Author",
      "categories": [
        "meta",
      ],
      "contentHash": "78c96779522946cdb5b06aac3b63902c6f753ab360e9f5d5456da50bac12d431",
      "excerpt": "The author object is the 1.0 form.",
      "excerptHtml": "<p>The <code>author</code> object is the 1.0 form.</p>",
      "feedBodyHtml": "<p>The <code>author</code> object is the 1.0 form.</p>",
      "feedBodyText": "The author object is the 1.0 form.",
      "feedBodyTruncated": false,
      "guid": "2026-09-20-hello",
      "imageUrl": null,
      "link": "https://legacy.example.com/2026/09/20/hello",
      "publishedAt": 2026-09-20T15:00:00.000Z,
      "sourceIndex": 0,
      "title": "Hello from JSON Feed 1.0",
      "titleNorm": "hello from json feed 1 0",
    },
  ],
  "itemsTruncated": false,
  "kind": "json",
  "lenient": false,
  "ok": true,
  "totalItems": 1,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > jsonfeed-1.1.json parses to the expected result 1`] = `
{
  "feed": {
    "description": "Short posts & links.",
    "iconUrl": "https://micro.example.com/icon-512.png",
    "langHint": "sk",
    "language": "sk-SK",
    "siteUrl": "https://micro.example.com/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Example Microblog",
    "ttlMinutes": null,
  },
  "itemErrorCount": 1,
  "itemErrors": [
    {
      "code": "ITEM_INVALID",
      "index": 4,
    },
  ],
  "items": [
    {
      "author": "Peter Príklad",
      "categories": [
        "beh",
        "Bratislava",
      ],
      "contentHash": "d2ada8e48f74f7ccdf383e6ded4346f33b03c96a185bb01aa600509e3d39dd3a",
      "excerpt": "Ranný beh po nábreží Dunaja.",
      "excerptHtml": "<p>Ranný <strong>beh</strong> po nábreží Dunaja.</p>",
      "feedBodyHtml": "<p>Ranný <strong>beh</strong> po nábreží Dunaja.</p>",
      "feedBodyText": "Ranný beh po nábreží Dunaja.",
      "feedBodyTruncated": false,
      "guid": "https://micro.example.com/2026/09/25/html-post",
      "imageUrl": "https://micro.example.com/uploads/2026/09/danube.jpg",
      "link": "https://micro.example.com/2026/09/25/html-post",
      "publishedAt": 2026-09-25T04:45:00.000Z,
      "sourceIndex": 0,
      "title": "HTML content with an image",
      "titleNorm": "html content with an image",
    },
    {
      "author": "Peter Príklad",
      "categories": [],
      "contentHash": "db6a488e9f0806eab5d1f5e37e92c9cdb29c1e9a6d70dac720046b76ede0ddb9",
      "excerpt": "A post without a title. It has two paragraphs & a <tag> that stays text.",
      "excerptHtml": "<p>A post without a title.</p><p>It has two paragraphs &amp; a &lt;tag&gt; that stays text.</p>",
      "feedBodyHtml": "<p>A post without a title.</p><p>It has two paragraphs &amp; a &lt;tag&gt; that stays text.</p>",
      "feedBodyText": "A post without a title.

It has two paragraphs & a <tag> that stays text.",
      "feedBodyTruncated": false,
      "guid": "1027",
      "imageUrl": null,
      "link": "https://micro.example.com/2026/09/24/text-post",
      "publishedAt": 2026-09-24T18:00:00.000Z,
      "sourceIndex": 1,
      "title": "A post without a title. It has two paragraphs & a <tag> that stays text.",
      "titleNorm": "a post without a title it has two paragraphs a tag that stays text",
    },
    {
      "author": "Peter Príklad",
      "categories": [],
      "contentHash": "f1ef051ef812efbe23ad20a63de03aab68872b0b3131d2a457b50acd5d79822f",
      "excerpt": "Worth reading.",
      "excerptHtml": "<p>Worth reading.</p>",
      "feedBodyHtml": "<p>Worth reading.</p>",
      "feedBodyText": "Worth reading.",
      "feedBodyTruncated": false,
      "guid": "linkblog-88",
      "imageUrl": "https://micro.example.com/cards/linked.png",
      "link": "https://other.example.net/interesting-article",
      "publishedAt": 2026-09-23T12:00:00.000Z,
      "sourceIndex": 2,
      "title": "Linked: an interesting article elsewhere",
      "titleNorm": "linked an interesting article elsewhere",
    },
    {
      "author": "Peter Príklad",
      "categories": [],
      "contentHash": "a2d3878034800a000104440753cdc643f5312f67aeba47e0b715b80f829b7dbe",
      "excerpt": "Audio and a cover image.",
      "excerptHtml": "<p>Audio and a cover image.</p>",
      "feedBodyHtml": "<p>Audio and a cover image.</p>",
      "feedBodyText": "Audio and a cover image.",
      "feedBodyTruncated": false,
      "guid": "episode-12",
      "imageUrl": "https://cdn.example.com/podcast/12-cover.jpg",
      "link": "https://micro.example.com/podcast/12",
      "publishedAt": 2026-09-22T08:00:00.000Z,
      "sourceIndex": 3,
      "title": "Podcast 12: attachments are not links",
      "titleNorm": "podcast 12 attachments are not links",
    },
    {
      "author": "Peter Príklad",
      "categories": [],
      "contentHash": "f312c1a5cba1d6e346c3a2051d197dae41dae91487cc0e6433b537f27544396e",
      "excerpt": "An undated note; it sorts after the dated items and its title falls back to this excerpt text.",
      "excerptHtml": "<p>An undated note; it sorts after the dated items and its title falls back to this excerpt text.</p>",
      "feedBodyHtml": "<p>An undated note; it sorts after the dated items and its title falls back to this excerpt text.</p>",
      "feedBodyText": "An undated note; it sorts after the dated items and its title falls back to this excerpt text.",
      "feedBodyTruncated": false,
      "guid": "undated-note",
      "imageUrl": null,
      "link": null,
      "publishedAt": null,
      "sourceIndex": 5,
      "title": "An undated note; it sorts after the dated items and its title falls back to this",
      "titleNorm": "an undated note it sorts after the dated items and its title falls back to this",
    },
  ],
  "itemsTruncated": false,
  "kind": "json",
  "lenient": false,
  "ok": true,
  "totalItems": 6,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > leading-junk.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "A PHP warning precedes the XML declaration.",
    "iconUrl": null,
    "langHint": null,
    "language": null,
    "siteUrl": "https://legacy-wp.example.com/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Legacy WordPress Site",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": null,
      "categories": [],
      "contentHash": "1312b682e374ecbe826af541498633fd15cd3f965f2900277a8e075b1f6eaeb6",
      "excerpt": "The lenient pass removes bounded leading junk before the root.",
      "excerptHtml": "The lenient pass removes bounded leading junk before the root.",
      "feedBodyHtml": "The lenient pass removes bounded leading junk before the root.",
      "feedBodyText": "The lenient pass removes bounded leading junk before the root.",
      "feedBodyTruncated": false,
      "guid": "https://legacy-wp.example.com/?p=77",
      "imageUrl": null,
      "link": "https://legacy-wp.example.com/2026/09/still-readable/",
      "publishedAt": 2026-09-24T10:00:00.000Z,
      "sourceIndex": 0,
      "title": "Still readable after the warning",
      "titleNorm": "still readable after the warning",
    },
  ],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": true,
  "ok": true,
  "totalItems": 1,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > linkless.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "Linkless items, identifiers and GUID limits.",
    "iconUrl": null,
    "langHint": null,
    "language": null,
    "siteUrl": "https://status.example.com/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Status Updates",
    "ttlMinutes": null,
  },
  "itemErrorCount": 3,
  "itemErrors": [
    {
      "code": "ITEM_GUID_TOO_LONG",
      "index": 5,
    },
    {
      "code": "ITEM_EMPTY",
      "index": 6,
    },
    {
      "code": "ITEM_EMPTY",
      "index": 7,
    },
  ],
  "items": [
    {
      "author": null,
      "categories": [],
      "contentHash": "127f868e9c878bcc7bb6fd2ba99837d073c389a8b08adf8c28bfc1ab934fa6be",
      "excerpt": "The API will be read-only between 02:00 and 03:00 UTC.",
      "excerptHtml": "The API will be read-only between 02:00 and 03:00 UTC.",
      "feedBodyHtml": "The API will be read-only between 02:00 and 03:00 UTC.",
      "feedBodyText": "The API will be read-only between 02:00 and 03:00 UTC.",
      "feedBodyTruncated": false,
      "guid": "status-2026-09-26-maintenance",
      "imageUrl": null,
      "link": null,
      "publishedAt": 2026-09-26T08:00:00.000Z,
      "sourceIndex": 0,
      "title": "Scheduled maintenance on Sunday",
      "titleNorm": "scheduled maintenance on sunday",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "7452e534c0fb76efedf5d081dbfb01b7818e42518536eb88b88813a3d8f8128f",
      "excerpt": "Resolved: elevated error rates.",
      "excerptHtml": "Resolved: elevated error rates.",
      "feedBodyHtml": "Resolved: elevated error rates.",
      "feedBodyText": "Resolved: elevated error rates.",
      "feedBodyTruncated": false,
      "guid": "https://status.example.com/incidents/771",
      "imageUrl": null,
      "link": "https://status.example.com/incidents/771",
      "publishedAt": 2026-09-25T08:00:00.000Z,
      "sourceIndex": 1,
      "title": "Permalink GUID becomes the link",
      "titleNorm": "permalink guid becomes the link",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "0e77d47f940f9c6122eba42ba7a81c51f8f34b0424e7e7ab5bdb5adc0d2484d4",
      "excerpt": "Opaque identifiers are never resolved against the feed URL.",
      "excerptHtml": "Opaque identifiers are never resolved against the feed URL.",
      "feedBodyHtml": "Opaque identifiers are never resolved against the feed URL.",
      "feedBodyText": "Opaque identifiers are never resolved against the feed URL.",
      "feedBodyTruncated": false,
      "guid": "incident/772",
      "imageUrl": null,
      "link": null,
      "publishedAt": 2026-09-24T08:00:00.000Z,
      "sourceIndex": 2,
      "title": "Opaque GUID is not a link",
      "titleNorm": "opaque guid is not a link",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "4cc0dd61dc04de8f52b2b96f28e27f6097d410341671555ddc4f595ce13d1311",
      "excerpt": "Identity falls back to title, date and excerpt.",
      "excerptHtml": "Identity falls back to title, date and excerpt.",
      "feedBodyHtml": "Identity falls back to title, date and excerpt.",
      "feedBodyText": "Identity falls back to title, date and excerpt.",
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": null,
      "publishedAt": 2026-09-23T08:00:00.000Z,
      "sourceIndex": 3,
      "title": "No identifier at all",
      "titleNorm": "no identifier at all",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "4da0391c6ca01080ac828ee3efa0110df3004f8588407c1e48718b530b2e62ec",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": "urn:example:status:CASE-Sensitive:AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz0123456789AbCdEfGhIjKlMnOpQrStUvWxYz",
      "imageUrl": null,
      "link": null,
      "publishedAt": 2026-09-22T08:00:00.000Z,
      "sourceIndex": 4,
      "title": "Long opaque GUID is kept complete",
      "titleNorm": "long opaque guid is kept complete",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "d0e9d326c00f0034da0a5aad14e54a76ba7c9ff148e705d41277300dc847e3b6",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": "only-an-id",
      "imageUrl": null,
      "link": null,
      "publishedAt": null,
      "sourceIndex": 8,
      "title": "(untitled)",
      "titleNorm": "untitled",
    },
  ],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": false,
  "ok": true,
  "totalItems": 9,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > media-images.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "Image selection order.",
    "iconUrl": null,
    "langHint": null,
    "language": null,
    "siteUrl": "https://media.example.com/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Media Examples",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": null,
      "categories": [],
      "contentHash": "e6ab88d536c80da9e0e787fb8285bcc951390429c672373bdde26cd8ba0445e0",
      "excerpt": "One.",
      "excerptHtml": "One.",
      "feedBodyHtml": "One.",
      "feedBodyText": "One.",
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": "https://media.example.com/img/1-enclosure.jpg",
      "link": "https://media.example.com/1",
      "publishedAt": null,
      "sourceIndex": 0,
      "title": "Enclosure image wins",
      "titleNorm": "enclosure image wins",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "960308993a857d6a0b34b2eeea784a8d5203777aadecc55c57429776a68bceec",
      "excerpt": "Two.",
      "excerptHtml": "Two.",
      "feedBodyHtml": "Two.",
      "feedBodyText": "Two.",
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": "https://media.example.com/img/2-media.png",
      "link": "https://media.example.com/2",
      "publishedAt": null,
      "sourceIndex": 1,
      "title": "Audio enclosure is skipped, media:content image is used",
      "titleNorm": "audio enclosure is skipped media content image is used",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "f61218051dd0cfe1165403da06bf1d8cc7774c84bc7f7cff9a1cb1c150ab5d1b",
      "excerpt": "Three.",
      "excerptHtml": "Three.",
      "feedBodyHtml": "Three.",
      "feedBodyText": "Three.",
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": "https://media.example.com/img/3-thumb.jpg",
      "link": "https://media.example.com/3",
      "publishedAt": null,
      "sourceIndex": 2,
      "title": "Video with a nested thumbnail",
      "titleNorm": "video with a nested thumbnail",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "c3f1a9e66b5af609199fa44b36756636dcf3cabc844def62fe6dfe827ac2d3be",
      "excerpt": "Four.",
      "excerptHtml": "Four.",
      "feedBodyHtml": "Four.",
      "feedBodyText": "Four.",
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": "https://media.example.com/img/4-large.webp?w=1200",
      "link": "https://media.example.com/4",
      "publishedAt": null,
      "sourceIndex": 3,
      "title": "media:group without medium, image by extension",
      "titleNorm": "media group without medium image by extension",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "e9a1738de2e4c723348c88f2eb59c56760a781cadfc449aec302fe62980ae0e3",
      "excerpt": "Five.",
      "excerptHtml": "<p> Five.</p>",
      "feedBodyHtml": "<p> Five.</p>",
      "feedBodyText": "Five.",
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": "https://media.example.com/img/5-inline.jpg",
      "link": "https://media.example.com/5",
      "publishedAt": null,
      "sourceIndex": 4,
      "title": "First inline image after a tracking pixel",
      "titleNorm": "first inline image after a tracking pixel",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "04ce9edd68653bc27f4ce0041fbffd02efd88474a48f09681a5f1191be25394b",
      "excerpt": "Six.",
      "excerptHtml": "Six.",
      "feedBodyHtml": "Six.",
      "feedBodyText": "Six.",
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": "https://media.example.com/img/6-thumb.jpg",
      "link": "https://media.example.com/6",
      "publishedAt": null,
      "sourceIndex": 5,
      "title": "Relative media:thumbnail",
      "titleNorm": "relative media thumbnail",
    },
  ],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": false,
  "ok": true,
  "totalItems": 6,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > not-a-feed.html parses to the expected result 1`] = `
{
  "code": "FEED_NOT_A_FEED",
  "message": "The document is an HTML page, not a feed",
  "ok": false,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > rdf.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "Daily science headlines.",
    "iconUrl": "https://news.example.net/logo.gif",
    "langHint": "de",
    "language": "de-AT",
    "siteUrl": "https://news.example.net/",
    "syUpdateFrequency": 4,
    "syUpdatePeriod": "daily",
    "title": "Example Science News",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": "Lukas Beispiel",
      "categories": [
        "Astronomy",
      ],
      "contentHash": "9b174f27681caf92b62695ea8690924bc659b958e03b2f0e8e0f8de0d1cda5bd",
      "excerpt": "Amateur astronomers report a sudden outburst of Comet C/2026 A1.",
      "excerptHtml": "<p>Amateur astronomers report a sudden outburst of <em>Comet C/2026 A1</em>.</p>",
      "feedBodyHtml": "<p>Amateur astronomers report a sudden outburst of <em>Comet C/2026 A1</em>.</p>",
      "feedBodyText": "Amateur astronomers report a sudden outburst of Comet C/2026 A1.",
      "feedBodyTruncated": false,
      "guid": "https://news.example.net/2026/09/25/comet/",
      "imageUrl": null,
      "link": "https://news.example.net/2026/09/25/comet/",
      "publishedAt": 2026-09-25T19:10:00.000Z,
      "sourceIndex": 0,
      "title": "Comet C/2026 A1 brightens faster than expected",
      "titleNorm": "comet c 2026 a1 brightens faster than expected",
    },
    {
      "author": "Eva Muster",
      "categories": [
        "Ecology",
        "Climate",
      ],
      "contentHash": "6cc24bb1f7553479c59cbca9ef6711b558319ddc908804e3208bb1b46ac2588d",
      "excerpt": "A ten-year field study in the Alps.",
      "excerptHtml": "A ten-year field study in the Alps.",
      "feedBodyHtml": "A ten-year field study in the Alps.",
      "feedBodyText": "A ten-year field study in the Alps.",
      "feedBodyTruncated": false,
      "guid": "https://news.example.net/2026/09/24/soil/",
      "imageUrl": null,
      "link": "https://news.example.net/2026/09/24/soil/",
      "publishedAt": 2026-09-24T00:00:00.000Z,
      "sourceIndex": 1,
      "title": "Soil microbes store more carbon in cold winters",
      "titleNorm": "soil microbes store more carbon in cold winters",
    },
  ],
  "itemsTruncated": false,
  "kind": "rdf",
  "lenient": false,
  "ok": true,
  "totalItems": 2,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > relative-links.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "Links relative to the final feed URL and to xml:base.",
    "iconUrl": "https://www.example.com/magazine/issues/logo.png",
    "langHint": null,
    "language": null,
    "siteUrl": "https://www.example.com/magazine/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Relative Magazine",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": null,
      "categories": [],
      "contentHash": "a0e3f4e3cdda57560a85aa094cf9428c06748b469fe00583a5af956ee1a6aaf7",
      "excerpt": "See part two and the cover.",
      "excerptHtml": "<p>See <a href="https://www.example.com/magazine/issues/42/cover-story.html#part-2" rel="noopener noreferrer nofollow" target="_blank">part two</a> and  the cover.</p>",
      "feedBodyHtml": "<p>See <a href="https://www.example.com/magazine/issues/42/cover-story.html#part-2" rel="noopener noreferrer nofollow" target="_blank">part two</a> and  the cover.</p>",
      "feedBodyText": "See part two and the cover.",
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": "https://www.example.com/magazine/issues/42/cover.jpg",
      "link": "https://www.example.com/magazine/issues/42/cover-story.html",
      "publishedAt": 2026-09-20T08:00:00.000Z,
      "sourceIndex": 0,
      "title": "Relative to the channel base",
      "titleNorm": "relative to the channel base",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "d69ef51d10226657969bc9a872ce9c86a7cf58854a3f8dc30e2487ff43470315",
      "excerpt": "A protocol-relative image.",
      "excerptHtml": "<p> A protocol-relative image.</p>",
      "feedBodyHtml": "<p> A protocol-relative image.</p>",
      "feedBodyText": "A protocol-relative image.",
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": "https://img.example.net/letters.png",
      "link": "https://cdn.example.net/archive/2026/09/letters.html",
      "publishedAt": 2026-09-19T08:00:00.000Z,
      "sourceIndex": 1,
      "title": "Item-level xml:base",
      "titleNorm": "item level xml base",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "778ba0238e3926a14989a2701103abb580d7b9977bc8320047b54696ed981f3d",
      "excerpt": "A link starting with a slash.",
      "excerptHtml": "A link starting with a slash.",
      "feedBodyHtml": "A link starting with a slash.",
      "feedBodyText": "A link starting with a slash.",
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://www.example.com/about/contact",
      "publishedAt": 2026-09-18T08:00:00.000Z,
      "sourceIndex": 2,
      "title": "Root-relative link",
      "titleNorm": "root relative link",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "9c926dc7c6de6a9249190d04addef27e800a8253663a98f02216524a9d711b26",
      "excerpt": null,
      "excerptHtml": null,
      "feedBodyHtml": null,
      "feedBodyText": null,
      "feedBodyTruncated": false,
      "guid": "https://www.example.com/magazine/issues/43/",
      "imageUrl": null,
      "link": "https://www.example.com/magazine/issues/43/",
      "publishedAt": 2026-09-17T08:00:00.000Z,
      "sourceIndex": 3,
      "title": "Unusable link falls back to the permalink GUID",
      "titleNorm": "unusable link falls back to the permalink guid",
    },
  ],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": false,
  "ok": true,
  "totalItems": 4,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > rss2.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "Notes on distributed systems, databases & the web.",
    "iconUrl": "https://blog.example.com/assets/logo-144.png",
    "langHint": "en",
    "language": "en-US",
    "siteUrl": "https://blog.example.com/",
    "syUpdateFrequency": 2,
    "syUpdatePeriod": "hourly",
    "title": "Example Engineering Blog",
    "ttlMinutes": 60,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": "Jana Nováková",
      "categories": [
        "Databases",
        "PostgreSQL",
        "News & Opinion",
      ],
      "contentHash": "73a69438ef9bbed313f8edc9e41dd35934c0570c46880239b673135a424a2e09",
      "excerpt": "For three years our workers pulled jobs from a separate message broker. Keeping it consistent with the database cost us more than it saved. The outbox pattern Every state change and its follow-up work are written in one transaction. Read the locking documentation for the details. Jobs flow from the outbox to the workers. SELECT * FROM outbox ORDER BY id FOR UPDATE SKIP LOCKED LIMIT 10; The post Why we moved our job queue into PostgreSQL appeared first on Example Engineering Blog.",
      "excerptHtml": "<p>For three years our workers pulled jobs from a separate message broker. Keeping it consistent with the database cost us more than it saved.</p>
<h2>The outbox pattern</h2>
<p>Every state change and its follow-up work are written in <strong>one transaction</strong>. Read the <a href="https://www.postgresql.org/docs/current/sql-select.html#SQL-FOR-UPDATE-SHARE" rel="noopener noreferrer nofollow" target="_blank">locking documentation</a> for the details.</p>
<figure><figcaption>Jobs flow from the outbox to the workers.</figcaption></figure>
<pre><code>SELECT * FROM outbox ORDER BY id FOR UPDATE SKIP LOCKED LIMIT 10;</code></pre>
<p>The post <a href="https://blog.example.com/2026/09/postgres-job-queue/" rel="noopener noreferrer nofollow" target="_blank">Why we moved our job queue into PostgreSQL</a> appeared first on <a href="https://blog.example.com/" rel="noopener noreferrer nofollow" target="_blank">Example Engineering Blog</a>.</p>",
      "feedBodyHtml": "<p>For three years our workers pulled jobs from a separate message broker. Keeping it consistent with the database cost us more than it saved.</p>
<h2>The outbox pattern</h2>
<p>Every state change and its follow-up work are written in <strong>one transaction</strong>. Read the <a href="https://www.postgresql.org/docs/current/sql-select.html#SQL-FOR-UPDATE-SHARE" rel="noopener noreferrer nofollow" target="_blank">locking documentation</a> for the details.</p>
<figure><figcaption>Jobs flow from the outbox to the workers.</figcaption></figure>
<pre><code>SELECT * FROM outbox ORDER BY id FOR UPDATE SKIP LOCKED LIMIT 10;</code></pre>
<p>The post <a href="https://blog.example.com/2026/09/postgres-job-queue/" rel="noopener noreferrer nofollow" target="_blank">Why we moved our job queue into PostgreSQL</a> appeared first on <a href="https://blog.example.com/" rel="noopener noreferrer nofollow" target="_blank">Example Engineering Blog</a>.</p>",
      "feedBodyText": "For three years our workers pulled jobs from a separate message broker. Keeping it consistent with the database cost us more than it saved.

The outbox pattern

Every state change and its follow-up work are written in one transaction. Read the locking documentation for the details.

Jobs flow from the outbox to the workers.

SELECT * FROM outbox ORDER BY id FOR UPDATE SKIP LOCKED LIMIT 10;

The post Why we moved our job queue into PostgreSQL appeared first on Example Engineering Blog.",
      "feedBodyTruncated": false,
      "guid": "https://blog.example.com/?p=4812",
      "imageUrl": "https://blog.example.com/wp-content/uploads/2026/09/queue-diagram.png",
      "link": "https://blog.example.com/2026/09/postgres-job-queue/?utm_source=rss&utm_medium=rss",
      "publishedAt": 2026-09-25T14:05:00.000Z,
      "sourceIndex": 0,
      "title": "Why we moved our job queue into PostgreSQL",
      "titleNorm": "why we moved our job queue into postgresql",
    },
    {
      "author": "releases@example.com (Release Team)",
      "categories": [
        "release",
      ],
      "contentHash": "847a977299075d84654342769d8c92c37c2d0bf293acbc2d0d94e22aeb9764da",
      "excerpt": "Version 4.2 is out. Search is up to 3× faster & index builds use half the memory.",
      "excerptHtml": "Version 4.2 is out. Search is up to 3× faster &amp; index builds use half the memory.",
      "feedBodyHtml": "Version 4.2 is out. Search is up to 3× faster &amp; index builds use half the memory.",
      "feedBodyText": "Version 4.2 is out. Search is up to 3× faster & index builds use half the memory.",
      "feedBodyTruncated": false,
      "guid": "https://blog.example.com/2026/09/release-4-2/",
      "imageUrl": "https://blog.example.com/media/release-4-2-cover.jpg",
      "link": "https://blog.example.com/2026/09/release-4-2/",
      "publishedAt": 2026-09-23T09:00:00.000Z,
      "sourceIndex": 1,
      "title": "Release notes: 4.2 brings faster full-text search",
      "titleNorm": "release notes 4 2 brings faster full text search",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "b00940de3cebe039bf047a4ab074807bbacb593e618db3a31ce6c71def7ec423",
      "excerpt": "We talk about read replicas, caching and when not to add either.",
      "excerptHtml": "<p>We talk about read replicas, caching and <em>when not to</em> add either.</p>",
      "feedBodyHtml": "<p>We talk about read replicas, caching and <em>when not to</em> add either.</p>",
      "feedBodyText": "We talk about read replicas, caching and when not to add either.",
      "feedBodyTruncated": false,
      "guid": "https://blog.example.com/podcast/31/",
      "imageUrl": null,
      "link": "https://blog.example.com/podcast/31/",
      "publishedAt": 2026-09-21T04:30:00.000Z,
      "sourceIndex": 2,
      "title": "Podcast: episode 31 — scaling reads",
      "titleNorm": "podcast episode 31 scaling reads",
    },
  ],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": false,
  "ok": true,
  "totalItems": 3,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > unescaped-ampersand.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "News & updates",
    "iconUrl": null,
    "langHint": null,
    "language": null,
    "siteUrl": "https://fans.example.com/?ref=rss&lang=en",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Tom & Jerry Fan Club",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": null,
      "categories": [],
      "contentHash": "b17d18f107047aff5f3712d2aa415ebf791fe98f5fd873d186e6c1849e0207eb",
      "excerpt": "Cats & mice & a valid entity, é, é and space. An unknown &bogus; reference.",
      "excerptHtml": "Cats &amp; mice &amp; a valid entity, é, é and space. An unknown &amp;bogus; reference.",
      "feedBodyHtml": "Cats &amp; mice &amp; a valid entity, é, é and space. An unknown &amp;bogus; reference.",
      "feedBodyText": "Cats & mice & a valid entity, é, é and space. An unknown &bogus; reference.",
      "feedBodyTruncated": false,
      "guid": "fans-90&A",
      "imageUrl": null,
      "link": "https://fans.example.com/posts?id=90&view=full",
      "publishedAt": 2026-09-22T11:00:00.000Z,
      "sourceIndex": 0,
      "title": "Q&A: Tom & Jerry's 90th anniversary",
      "titleNorm": "q a tom jerry s 90th anniversary",
    },
    {
      "author": null,
      "categories": [],
      "contentHash": "d95874f2ad8858b7e7cfcd34156d527a1747c79b61219de2eb946b73ce0d06bb",
      "excerpt": "AT&T & friends",
      "excerptHtml": "<p>AT&amp;T &amp; friends</p>",
      "feedBodyHtml": "<p>AT&amp;T &amp; friends</p>",
      "feedBodyText": "AT&T & friends",
      "feedBodyTruncated": false,
      "guid": null,
      "imageUrl": null,
      "link": "https://fans.example.com/posts?id=91",
      "publishedAt": 2026-09-21T11:00:00.000Z,
      "sourceIndex": 1,
      "title": "CDATA & stays as it is",
      "titleNorm": "cdata stays as it is",
    },
  ],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": true,
  "ok": true,
  "totalItems": 2,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > utf16le.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": null,
    "iconUrl": null,
    "langHint": "pl",
    "language": "pl",
    "siteUrl": "https://swiat.example/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Wiadomości ze świata",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": null,
      "categories": [],
      "contentHash": "18ea7b07d2d232ade7884d283d0e7e35548d94a7a53b95a9a1fe8436bf835034",
      "excerpt": "Pierwsze kursy ruszą w październiku. Żółte wagony obsłużą 12 przystanków.",
      "excerptHtml": "<p>Pierwsze kursy ruszą w październiku. Żółte wagony obsłużą 12 przystanków.</p>",
      "feedBodyHtml": "<p>Pierwsze kursy ruszą w październiku. Żółte wagony obsłużą 12 przystanków.</p>",
      "feedBodyText": "Pierwsze kursy ruszą w październiku. Żółte wagony obsłużą 12 przystanków.",
      "feedBodyTruncated": false,
      "guid": "tag:swiat.example,2026:lodz-tramwaj",
      "imageUrl": null,
      "link": "https://swiat.example/lodz/tramwaj",
      "publishedAt": 2026-09-25T07:30:00.000Z,
      "sourceIndex": 0,
      "title": "Łódź otwiera nową linię tramwajową 🚋",
      "titleNorm": "łodz otwiera nowa linie tramwajowa",
    },
  ],
  "itemsTruncated": false,
  "kind": "atom",
  "lenient": false,
  "ok": true,
  "totalItems": 1,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > windows-1250.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "Správy z Košíc a okolia",
    "iconUrl": null,
    "langHint": "sk",
    "language": "sk-SK",
    "siteUrl": "https://www.vychod.example/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Východoslovenský denník – Správy",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [
    {
      "author": null,
      "categories": [
        "Košice",
        "Doprava",
      ],
      "contentHash": "d7848b58f0be12e7a6825efb241cfafc9aa40fdc3b934d4463d7c5ade60ef2a3",
      "excerpt": "„Cestovné sa zvýši o 20 %,“ uviedol dopravný podnik. Protest sa začal o 17.00 h na Hlavnej ulici…",
      "excerptHtml": "„Cestovné sa zvýši o 20 %,“ uviedol dopravný podnik. Protest sa začal o 17.00 h na Hlavnej ulici…",
      "feedBodyHtml": "„Cestovné sa zvýši o 20 %,“ uviedol dopravný podnik. Protest sa začal o 17.00 h na Hlavnej ulici…",
      "feedBodyText": "„Cestovné sa zvýši o 20 %,“ uviedol dopravný podnik. Protest sa začal o 17.00 h na Hlavnej ulici…",
      "feedBodyTruncated": false,
      "guid": "vychod-55120",
      "imageUrl": null,
      "link": "https://www.vychod.example/kosice/protest-mhd",
      "publishedAt": 2026-09-25T16:30:00.000Z,
      "sourceIndex": 0,
      "title": "Ľudia v Košiciach protestovali proti zdražovaniu MHD",
      "titleNorm": "ludia v kosiciach protestovali proti zdrazovaniu mhd",
    },
    {
      "author": null,
      "categories": [
        "Počasie",
      ],
      "contentHash": "33bc7e2477acb18972c3a25e3be16328ce3c2474325629c1b156596bbaaacf64",
      "excerpt": "Teploty klesnú pod 5 °C. Ďalšie podrobnosti: ťažké mraky, dážď a poľadovica.",
      "excerptHtml": "Teploty klesnú pod 5 °C. Ďalšie podrobnosti: ťažké mraky, dážď a poľadovica.",
      "feedBodyHtml": "Teploty klesnú pod 5 °C. Ďalšie podrobnosti: ťažké mraky, dážď a poľadovica.",
      "feedBodyText": "Teploty klesnú pod 5 °C. Ďalšie podrobnosti: ťažké mraky, dážď a poľadovica.",
      "feedBodyTruncated": false,
      "guid": "vychod-55118",
      "imageUrl": null,
      "link": "https://www.vychod.example/pocasie/vikend",
      "publishedAt": 2026-09-25T10:05:00.000Z,
      "sourceIndex": 1,
      "title": "Počasie: cez víkend sa ochladí, v Tatrách môže snežiť",
      "titleNorm": "pocasie cez vikend sa ochladi v tatrach moze snezit",
    },
  ],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": false,
  "ok": true,
  "totalItems": 2,
}
`;

exports[`feed fixtures (spec 03 §12, §13) > zero-items.xml parses to the expected result 1`] = `
{
  "feed": {
    "description": "Nothing published yet.",
    "iconUrl": null,
    "langHint": "en",
    "language": "en",
    "siteUrl": "https://quiet.example.com/",
    "syUpdateFrequency": null,
    "syUpdatePeriod": null,
    "title": "Quiet Blog",
    "ttlMinutes": null,
  },
  "itemErrorCount": 0,
  "itemErrors": [],
  "items": [],
  "itemsTruncated": false,
  "kind": "rss",
  "lenient": false,
  "ok": true,
  "totalItems": 0,
}
`;
